@@ -82,6 +82,8 @@ In alphabetical order (by last name)
 * Ian Dees
 ** Patch LH[#183] quiet the Story Runner backtrace
 ** Patch [#11917] Cleaner Spec::Ui error for failed Selenium connection
+* Craig Demyanovich 
+** Patch LH[#241] Add support for should_not render_template
 * James Deville
 ** Patch [#13451] Add a null_object option to mock_model
 ** Patch for [#13065] Named routes throw a NoMethodError in Helper specs
